[gd_scene load_steps=13 format=3 uid="uid://cfb4m53jrc1sb"]

[ext_resource type="PackedScene" uid="uid://bmgqwgwen0pge" path="res://goku.tscn" id="1_2as26"]
[ext_resource type="Script" path="res://game.gd" id="1_jqwrt"]
[ext_resource type="PackedScene" uid="uid://ba1uokapt5k7a" path="res://mountain_parallax_background.tscn" id="2_8uakb"]
[ext_resource type="Script" path="res://game_camera.gd" id="4_hsskd"]
[ext_resource type="Script" path="res://overload_status_label.gd" id="11_dyslq"]
[ext_resource type="Script" path="res://overload_progress_bar.gd" id="11_qkw2n"]

[sub_resource type="Curve2D" id="Curve2D_3hmqq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -354, 146, 0, 0, 0, 0, -382, 462)
}
point_count = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3jihk"]
bg_color = Color(0.792157, 0.792157, 0.792157, 0.317647)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2b5p"]
bg_color = Color(1, 0.835294, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q75dj"]
bg_color = Color(0.0627451, 0.698039, 0.937255, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hx0oe"]
bg_color = Color(0, 0.478431, 0.764706, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f0y0m"]
bg_color = Color(0.0235294, 0.113725, 0.329412, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_jqwrt")

[node name="MountainParallaxBackground" parent="." instance=ExtResource("2_8uakb")]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1
visible = false

[node name="ColorRect" type="ColorRect" parent="Background"]
offset_right = 1935.0
offset_bottom = 1101.0
color = Color(0.207843, 0.501961, 0.580392, 1)

[node name="Goku" parent="." instance=ExtResource("1_2as26")]
position = Vector2(712, 560)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.85
autostart = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_3hmqq")

[node name="SpawnPath" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(-380.246, 442.207)
rotation = 1.65917
progress = 297.338

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="ScoreLabel" type="Label" parent="UI/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -301.0
offset_right = 162.0
offset_bottom = 48.0
grow_vertical = 0
theme_override_font_sizes/font_size = 256
text = "0"

[node name="OverloadProgressBar" type="ProgressBar" parent="UI/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -714.0
offset_top = -51.0
offset_right = 714.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.152941, 0.168627, 0.188235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/background = SubResource("StyleBoxFlat_3jihk")
theme_override_styles/fill = SubResource("StyleBoxFlat_m2b5p")
max_value = 12.0
step = 1.0
show_percentage = false
script = ExtResource("11_qkw2n")

[node name="PauseOverloadFillTimer" type="Timer" parent="UI/ColorRect/OverloadProgressBar"]
unique_name_in_owner = true
wait_time = 0.5

[node name="OverloadStatusLabel" type="Label" parent="UI/ColorRect"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -81.0
offset_right = 46.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.717647, 0.188235, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.321569)
theme_override_font_sizes/font_size = 36
text = "Placeholder"
script = ExtResource("11_dyslq")

[node name="ShowTimer" type="Timer" parent="UI/ColorRect/OverloadStatusLabel"]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.596078)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 256
text = "GAME OVER"

[node name="RestartButton" type="Button" parent="GameOver/ColorRect"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = 235.0
offset_right = 197.0
offset_bottom = 357.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_q75dj")
theme_override_styles/hover = SubResource("StyleBoxFlat_hx0oe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f0y0m")
text = "Try Again"

[node name="GameCamera" type="Camera2D" parent="."]
position = Vector2(960, 540)
script = ExtResource("4_hsskd")

[node name="CenterOfScreenMarker" type="Marker2D" parent="GameCamera"]
unique_name_in_owner = true
position = Vector2(2.08165e-12, 2.08165e-12)

[connection signal="score_increased" from="." to="UI/ColorRect/OverloadProgressBar" method="_on_game_score_increased"]
[connection signal="attempted_overload" from="Goku" to="UI/ColorRect/OverloadStatusLabel" method="_on_goku_attempted_overload"]
[connection signal="has_overloaded" from="Goku" to="UI/ColorRect/OverloadProgressBar" method="_on_goku_has_overloaded"]
[connection signal="has_overloaded" from="Goku" to="UI/ColorRect/OverloadStatusLabel" method="_on_goku_has_overloaded"]
[connection signal="health_depleted" from="Goku" to="." method="_on_goku_health_depleted"]
[connection signal="teleported" from="Goku" to="GameCamera" method="_on_goku_teleported"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="progress_bar_full" from="UI/ColorRect/OverloadProgressBar" to="Goku" method="_on_overload_progress_bar_progress_bar_full"]
[connection signal="progress_bar_full" from="UI/ColorRect/OverloadProgressBar" to="UI/ColorRect/OverloadStatusLabel" method="_on_overload_progress_bar_progress_bar_full"]
[connection signal="timeout" from="UI/ColorRect/OverloadProgressBar/PauseOverloadFillTimer" to="UI/ColorRect/OverloadProgressBar" method="_on_pause_score_timer_timeout"]
[connection signal="timeout" from="UI/ColorRect/OverloadStatusLabel/ShowTimer" to="UI/ColorRect/OverloadStatusLabel" method="_on_show_timer_timeout"]
[connection signal="pressed" from="GameOver/ColorRect/RestartButton" to="." method="_on_restart_button_pressed"]
